veilid-flutter/lib/bridge_generated.dart


  late final _new_box_autoadd_veilid_configPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_VeilidConfig> Function()>>(
          'new_box_autoadd_veilid_config');
  late final _new_box_autoadd_veilid_config = _new_box_autoadd_veilid_configPtr
      .asFunction<ffi.Pointer<wire_VeilidConfig> Function()>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list(
    int len,
  ) {
    return _new_uint_8_list(
      len,
    );
  }

  late final _new_uint_8_listPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list');
  late final _new_uint_8_list = _new_uint_8_listPtr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void free_WireSyncReturnStruct(
    WireSyncReturnStruct val,
  ) {
    return _free_WireSyncReturnStruct(
      val,
    );
  }

  late final _free_WireSyncReturnStructPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturnStruct)>>(
          'free_WireSyncReturnStruct');
  late final _free_WireSyncReturnStruct = _free_WireSyncReturnStructPtr
      .asFunction<void Function(WireSyncReturnStruct)>();

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
          'store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();
}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_StringList extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_uint_8_list>> ptr;

  @ffi.Int32()
  external int len;
}

class wire_VeilidConfig extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> program_name;

  external ffi.Pointer<wire_uint_8_list> veilid_namespace;

  @ffi.Uint8()
  external int capabilities__protocol_udp;

  @ffi.Uint8()
  external int capabilities__protocol_connect_tcp;

  @ffi.Uint8()
  external int capabilities__protocol_accept_tcp;

  @ffi.Uint8()
  external int capabilities__protocol_connect_ws;

  @ffi.Uint8()
  external int capabilities__protocol_accept_ws;

  @ffi.Uint8()
  external int capabilities__protocol_connect_wss;

  @ffi.Uint8()
  external int capabilities__protocol_accept_wss;

  @ffi.Uint8()
  external int protected_store__allow_insecure_fallback;

  @ffi.Uint8()
  external int protected_store__always_use_insecure_storage;

  external ffi.Pointer<wire_uint_8_list>
      protected_store__insecure_fallback_directory;

  @ffi.Uint8()
  external int protected_store__delete;

  external ffi.Pointer<wire_uint_8_list> table_store__directory;

  @ffi.Uint8()
  external int table_store__delete;

  external ffi.Pointer<wire_uint_8_list> block_store__directory;

  @ffi.Uint8()
  external int block_store__delete;

  @ffi.Uint32()
  external int network__max_connections;

  @ffi.Uint32()
  external int network__connection_initial_timeout_ms;

  external ffi.Pointer<wire_uint_8_list> network__node_id;

  external ffi.Pointer<wire_uint_8_list> network__node_id_secret;

  external ffi.Pointer<wire_StringList> network__bootstrap;

  @ffi.Uint8()
  external int network__upnp;

  @ffi.Uint8()
  external int network__natpmp;

  @ffi.Uint8()
  external int network__enable_local_peer_scope;

  @ffi.Uint32()
  external int network__restricted_nat_retries;

  @ffi.Uint32()
  external int network__rpc__concurrency;

  @ffi.Uint32()
  external int network__rpc__queue_size;

  external ffi.Pointer<ffi.Uint32> network__rpc__max_timestamp_behind_ms;

  external ffi.Pointer<ffi.Uint32> network__rpc__max_timestamp_ahead_ms;

  @ffi.Uint32()
  external int network__rpc__timeout_ms;

  @ffi.Uint8()
  external int network__rpc__max_route_hop_count;

  external ffi.Pointer<ffi.Uint32> network__dht__resolve_node_timeout_ms;

  @ffi.Uint32()
  external int network__dht__resolve_node_count;

  @ffi.Uint32()
  external int network__dht__resolve_node_fanout;

  @ffi.Uint32()
  external int network__dht__max_find_node_count;

  external ffi.Pointer<ffi.Uint32> network__dht__get_value_timeout_ms;

  @ffi.Uint32()
  external int network__dht__get_value_count;

  @ffi.Uint32()
  external int network__dht__get_value_fanout;

  external ffi.Pointer<ffi.Uint32> network__dht__set_value_timeout_ms;

  @ffi.Uint32()
  external int network__dht__set_value_count;

  @ffi.Uint32()
  external int network__dht__set_value_fanout;

  @ffi.Uint32()
  external int network__dht__min_peer_count;

  @ffi.Uint32()
  external int network__dht__min_peer_refresh_time_ms;

  @ffi.Uint32()
  external int network__dht__validate_dial_info_receipt_time_ms;

  @ffi.Uint8()
  external int network__protocol__udp__enabled;

  @ffi.Uint32()
  external int network__protocol__udp__socket_pool_size;

  external ffi.Pointer<wire_uint_8_list> network__protocol__udp__listen_address;

  external ffi.Pointer<wire_uint_8_list> network__protocol__udp__public_address;

  @ffi.Uint8()
  external int network__protocol__tcp__connect;

  @ffi.Uint8()
  external int network__protocol__tcp__listen;

  @ffi.Uint32()
  external int network__protocol__tcp__max_connections;

  external ffi.Pointer<wire_uint_8_list> network__protocol__tcp__listen_address;

  external ffi.Pointer<wire_uint_8_list> network__protocol__tcp__public_address;

  @ffi.Uint8()
  external int network__protocol__ws__connect;

  @ffi.Uint8()
  external int network__protocol__ws__listen;

  @ffi.Uint32()
  external int network__protocol__ws__max_connections;

  external ffi.Pointer<wire_uint_8_list> network__protocol__ws__listen_address;

  external ffi.Pointer<wire_uint_8_list> network__protocol__ws__path;

  external ffi.Pointer<wire_uint_8_list> network__protocol__ws__url;

  @ffi.Uint8()
  external int network__protocol__wss__connect;

  @ffi.Uint32()
  external int network__protocol__wss__max_connections;

  @ffi.Uint32()
  external int network__leases__max_server_signal_leases;

  @ffi.Uint32()
  external int network__leases__max_server_relay_leases;

  @ffi.Uint32()
  external int network__leases__max_client_signal_leases;

  @ffi.Uint32()
  external int network__leases__max_client_relay_leases;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<ffi.Uint8 Function(DartPort, ffi.Pointer<ffi.Void>)>>;
typedef DartPort = ffi.Int64;
